--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>Nike</title>
 </head>
 <body>
-    hello
+    <header class="nike-bg-primary">
+        <!-- navbar start -->
+        <nav class="container navbar navbar-expand-lg ">
+            <div class="container">
+              <a class="navbar-brand" href="#"><img src="./icons/Logo.png" alt="" width="200" height="24"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item ps-3">
+                            <a class="nav-link" href="#">Product</a>
+                        </li>
+                        <li class="nav-item ps-3">
+                            <a class="nav-link" href="#">About us</a>
+                        </li>
+                        <li class="nav-item ps-3">
+                            <a class="nav-link" href="#">Contact us</a>
+                        </li>  
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- navbar end -->
+    </header>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
