--- a/index.html
+++ b/index.html
@@ -1,43 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Nike</title>
-</head>
-<body>
+  </head>
+  <body>
     <header class="nike-bg-primary">
-        <!-- navbar start -->
-        <nav class="container navbar navbar-expand-lg ">
-            <div class="container">
-              <a class="navbar-brand" href="#"><img src="./icons/Logo.png" alt="" width="200" height="24"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item ps-3">
-                            <a class="nav-link" href="#">Product</a>
-                        </li>
-                        <li class="nav-item ps-3">
-                            <a class="nav-link" href="#">About us</a>
-                        </li>
-                        <li class="nav-item ps-3">
-                            <a class="nav-link" href="#">Contact us</a>
-                        </li>  
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!-- navbar end -->
+      <!-- navbar start -->
+      <nav class="container navbar navbar-expand-lg">
+        <div class="container">
+          <a class="navbar-brand" href="#"
+            ><img src="./icons/Logo.png" alt="" width="200" height="24"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item ps-3">
+                <a class="nav-link" href="#">Product</a>
+              </li>
+              <li class="nav-item ps-3">
+                <a class="nav-link" href="#">About us</a>
+              </li>
+              <li class="nav-item ps-3">
+                <a class="nav-link" href="#">Contact us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- navbar end -->
+
+      <section class="container">
+        <div class="row d-flex justify-content-center align-items-center">
+          <div class="col-lg-5 order-last order-lg-first">
+            <img src="./images/Group 33092.png" alt="" class="img-fluid" />
+          </div>
+          <div class="col-lg-7 p-5">
+            <h1 class="text-uppercase orange-highlight">Nike React</h1>
+            <h1 class="text-uppercase navy-highlight">Infinity Run 2</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad,
+              magnam!
+            </p>
+            <button class="btn btn-buy-now btn-primary">
+              <i class="fas fa-shopping-cart"></i> Buy Now
+            </button>
+          </div>
+        </div>
+      </section>
     </header>
 
+    <main>
+        <!-- shoes section -->
+        <section class="container pb-5">
+            <h1 class="fw-bold fs-2 py-4">CASUAL SHOES</h1>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100 p-3">
+                        <img src="./images/image 5.png" class="card-img-top img-fluid rounded-3 bg-light img-fluid" alt="...">
+                        <div class="card-body px-0">
+                            <h5 class="card-title">Nike Shoe</h5>
+                            <p class="card-text">Lorem Ipsum is simply dummy text of the 
+                                printing and typesetting industry.</p>
+                        </div>
+                        <div>
+                            <div class="d-flex justify-content-between">
+                                <h1 class="nav-text fs-3 fw-bold text-warning">$235</h1>
+                                <button class="btn p-2 btn-primary"><img class="img-fluid w-25" src="icons/shopping-cart 1.png" alt=""> BUY NOW</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100 p-3">
+                        <img src="./images/Daco_1703273 1.png" class="card-img-top img-fluid rounded-3 bg-light" alt="...">
+                        <div class="card-body px-0">
+                            <h5 class="card-title">Sneakers Skate Shoe</h5>
+                            <p class="card-text">Lorem Ipsum is simply dummy text of the 
+                                printing and typesetting industry.</p>
+                        </div>
+                        <div>
+                            <div class="d-flex justify-content-between">
+                                <h1 class="nav-text fs-3 fw-bold text-warning">$235</h1>
+                                <button class="btn p-2 btn-primary"><img class="img-fluid w-25" src="icons/shopping-cart 1.png" alt=""> BUY NOW</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100 p-3">
+                        <img src="./images/pngegg 1.png" class="card-img-top img-fluid rounded-3 bg-light" alt="...">
+                        <div class="card-body px-0">
+                            <h5 class="card-title">Sneakers Basketball shoe</h5>
+                            <p class="card-text">Lorem Ipsum is simply dummy text of the 
+                                printing and typesetting industry.</p>
+                        </div>
+                        <div>
+                            <div class="d-flex justify-content-between">
+                                <h1 class="nav-text fs-3 fw-bold text-warning">$235</h1>
+                                <button class="btn p-2 btn-primary"><img class="img-fluid w-25" src="icons/shopping-cart 1.png" alt=""> BUY NOW</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- shoes section end -->
+
+        <!-- formal shoes -->
+        <section class="container pb-5">
+            <h1 class="fw-bold fs-2 py-4">FORMAL SHOES</h1>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                  <div class="card border border-0 shadow-lg h-100 p-3">
+                    <img src="./images/Mask Group.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Prestige High-Cut Leather </h5>
+                      <p class="card-text">Lorem Ipsum is simply dummy text of the 
+                        printing and typesetting industry.</p>
+                    </div>
+                    <div class="m-3">
+                        <div class="d-flex justify-content-between">
+                            <h1 class="nav-text fs-3 fw-bold text-warning">$235</h1>
+                            <button class="btn p-2 btn-primary"><img class="img-fluid w-25" src="icons/shopping-cart 1.png" alt=""> BUY NOW</button>
+                        </div>
+                    </div>
+                  </div>
+                </div> 
+                <div class="col">
+                  <div class="card border border-0 shadow-lg h-100 p-3">
+                    <img src="./images//Rectangle 38.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Prestige High-Cut Leather </h5>
+                      <p class="card-text">Lorem Ipsum is simply dummy text of the 
+                        printing and typesetting industry.</p>
+                    </div>
+                    <div class="m-3">
+                        <div class="d-flex justify-content-between">
+                            <h1 class="nav-text fs-3 fw-bold text-warning">$235</h1>
+                            <button class="btn p-2 btn-primary"><img class="img-fluid w-25" src="icons/shopping-cart 1.png" alt=""> BUY NOW</button>
+                        </div>
+                    </div>
+                  </div>
+                </div> 
+                <div class="col">
+                  <div class="card border border-0 shadow-lg h-100 p-3">
+                    <img src="./images/Rectangle 39.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Prestige High-Cut Leather </h5>
+                      <p class="card-text">Lorem Ipsum is simply dummy text of the 
+                        printing and typesetting industry.</p>
+                    </div>
+                    <div class="m-3">
+                        <div class="d-flex justify-content-between">
+                            <h1 class="nav-text fs-3 fw-bold text-warning">$235</h1>
+                            <button class="btn p-2 btn-primary"><img class="img-fluid w-25" src="icons/shopping-cart 1.png" alt=""> BUY NOW</button>
+                        </div>
+                    </div>
+                  </div>
+                </div> 
+            </div>
+        </section>
+    </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+  </body>
 </html>
